// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the Toast Component correctly 1`] = `
<div
  className="sc-chPdSV eMmOGE sc-bwzfXH kVOBrb"
>
  <div
    className="sc-kgoBCf btUZkU sc-bwzfXH jcVliq"
    color="success"
  >
    <i
      className="material-icons  sc-ifAKCX cKhEfU"
      color="white"
      onClick={undefined}
      scale="l"
    >
      check_circle
    </i>
  </div>
  <div
    className="sc-kGXeez beVzcQ sc-bwzfXH jlncrv"
  >
    Text
  </div>
  <div
    className="sc-kpOJdX iioVns sc-bwzfXH bBFwoB"
  >
    <div
      className="sc-dxgOiQ itkEVu"
    >
      <i
        className="material-icons  sc-ifAKCX fpvHwA"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;

exports[`renders the Toast Component correctly 2`] = `
<div
  className="sc-chPdSV eMmOGE sc-bwzfXH kVOBrb"
>
  <div
    className="sc-kgoBCf jtBGQy sc-bwzfXH jcVliq"
    color="error"
  >
    <i
      className="material-icons  sc-ifAKCX cKhEfU"
      color="white"
      onClick={undefined}
      scale="l"
    >
      error_outline
    </i>
  </div>
  <div
    className="sc-kGXeez beVzcQ sc-bwzfXH jlncrv"
  >
    <button>
      Test
    </button>
  </div>
  <div
    className="sc-kpOJdX iioVns sc-bwzfXH bBFwoB"
  >
    <div
      className="sc-dxgOiQ itkEVu"
    >
      <i
        className="material-icons  sc-ifAKCX fpvHwA"
        color={undefined}
        onClick={[Function]}
        scale={undefined}
      >
        close
      </i>
    </div>
  </div>
</div>
`;
